correctif galerie equipe

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -214,7 +214,7 @@
         <div class="row justify-content-around" id="EquipeGall">
 
             <div class="card   col-5  border-0 " width="300" height="300">
-                <img class="rounded" src="https://placeimg.com/300/300/people">
+                <img class="rounded" src="../IMG/alexandreL.jpg" width="100%"> 
                 <div class="textCard ">
                     <H5>REMY VANCAMP</H5>
                     <p class="description">Co-fondateur / Secretaire</p>
@@ -223,8 +223,8 @@
             </div>
 
 
-            <div class="card   col-5  border-0 " width="300" height="300">
-                <img class="rounded" src="https://placeimg.com/300/300/people">
+            <div class="card   col-5  border-0 "  width="300" height="300">
+                <img class="rounded" src="../IMG/alexandreL.jpg" width="100%"> 
                 <div class="textCard ">
                     <H5>ALEXANDRE LECOMTE</H5>
                     <p class="description">Co-fondateur / President</p>
@@ -235,7 +235,7 @@
 
 
             <div class="card   col-5  border-0 " width="300" height="300">
-                <img class="rounded" src="https://placeimg.com/300/300/people">
+                <img class="rounded" src="../IMG/alexandreL.jpg" width="100%">
                 <div class="textCard ">
                     <H5>MAXIME HOLLEBECQ</H5>
                     <p class="description">Co-fondateur / Tresorier</p>
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="card  col-5  border-0" width="300" height="300">
-                <img class="rounded" src="https://placeimg.com/300/300/people">
+                <img class="rounded" src="../IMG/alexandreL.jpg" width="100%">
                 <div class="textCard ">
                     <H5>CLAIRE BILLAU</H5>
                     <p class="description">Vice-Presidente</p>
