Add text Actions et presentation

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,16 +68,19 @@
 
 
         <div id="textProjet" width="70%">
-            <p class="TE" style="font-size: 25px"> ITeach, c'est l’accès à l’informatique pour tous et avec du matériel
-                recyclé.</p>
-            <p class="TE2">" Le projet ITeach s’est donné pour principale mission d’améliorer la formation et la
-                sensibilisation des jeunes
-                aux technologies de l’information. Nous recyclons du matériel informatique puis nous le valorisons comme
-                outil pédagogique pour la découverte de l'informatique et des nouvelles technologies. Nous organisons
-                également
-                des ateliers de découverte dans le theme du numerique à travers l'informatique à destination des jeunes
-                et
-                animés par des étudiants passionés. "</p>
+            <p class="TE" style="font-size: 25px"> ITeach, le numérique accessible à tous.</p>
+            <p class="TE2">"Dans une société en pleine transition
+                numérique, où Internet et les nouvelles
+                technologies envahissent notre quotidien,
+                ITeach défend l’idée que chacun doit être
+                formé à la bonne utilisation de ces outils."</p>
+            <p>En proposant des ateliers éducatifs autour de
+                l’informatique et des nouvelles technologies,
+                ITeach souhaite former, susciter des
+                vocations et outiller les enfants pour
+                faciliter leur insertion future dans la vie
+                active.</p>
+            <p>ITeach est une association loi 1901 située à Arras (62).</p>
         </div>
 
 
@@ -138,9 +141,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi molestias dolore expedita vero
-                    consequuntur veritatis facilis sit aliquid aperiam, atque, aliquam velit ullam exercitationem
-                    similique tenetur, magnam dolorem commodi architecto!
+                    Nous concevons et installons des environnements informatiques dédiés à l'éductation.
+                    Déploiement d’images systèmes, filtrage de contenu, moteur de recherche adapté, pare-feu, sécurisation du réseau, privilèges et droits d’accès…
+                    L'ensemble des solutions que nous utilisons sont OpenSource !
                 </div>
 
             </div>
@@ -158,9 +161,12 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi molestias dolore expedita vero
-                    consequuntur veritatis facilis sit aliquid aperiam, atque, aliquam velit ullam exercitationem
-                    similique tenetur, magnam dolorem commodi architecto!
+                    Les membres
+                    d’ITeach démarchent les entreprises,
+                    récupèrent leur matériel informatique, le
+                    revalorisent et l’utilisent pour déployer des
+                    outils informatiques dans les écoles qui en
+                    ont besoin.
                 </div>
 
             </div>
@@ -178,9 +184,8 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi molestias dolore expedita vero
-                    consequuntur veritatis facilis sit aliquid aperiam, atque, aliquam velit ullam exercitationem
-                    similique tenetur, magnam dolorem commodi architecto!
+                    Nous proposons des ateliers thématiques autour des technologies de l'information: bureautique, programmation, robotique...
+                    Ils sont conçus par des étudiants passionnées, en collaboration avec les équipes pédagogiques des écoles dans lesquels nous intervenons.
                 </div>
 
             </div>
@@ -198,9 +203,8 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi molestias dolore expedita vero
-                    consequuntur veritatis facilis sit aliquid aperiam, atque, aliquam velit ullam exercitationem
-                    similique tenetur, magnam dolorem commodi architecto!
+                    Parce que la sécurité numérique est l’affaire de tous, nous pensons que chaque citoyen doit être sensibilisé à la sécurité numérique.
+                    Les jeunes générations doivent être, le plus tôt possible, sensibilisées à une utilisation sécurisée de ces nouveaux outils.    
                 </div>
 
             </div>
