changement contact js

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -433,7 +433,7 @@
 
                     <div class="formulaire">
 
-                        <form action="" method="post">
+                        <form>
                             <div class="form-group text-dark">
                                 <label for="Email">Email</label>
                                 <input type="email" class="form-control"name="email" id="Email" aria-describedby="emailHelp"
@@ -485,8 +485,9 @@
     crossorigin="anonymous"></script>
 <script src="../OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
 
-
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="../JS/index.js"></script>
+<script src="../JS/contact.js"></script>
 
 
 </html>
