update bing map

--- a/index.html
+++ b/index.html
@@ -359,10 +359,14 @@
     <div class="container col-lg-10">
         <div class="row">
 
-            <iframe width="700" class="col-lg-6" height="400" frameborder="0"
-                src="https://www.bing.com/maps/embed?h=400&w=700&cp=50.29714133616245~2.734533730163591&lvl=16&typ=s&sty=r&src=SHELL&FORM=MBEDV8"
-                scrolling="no">
-            </iframe>
+            <div class="col-lg-6">
+                <iframe width="700" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=50.296765039276416~2.7337946946126346&lvl=17&typ=d&sty=h&src=SHELL&FORM=MBEDV8" scrolling="no">
+                </iframe>
+                <div style="white-space: nowrap; text-align: center; width: 500px; padding: 6px 0;">
+                   <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;FORM=MBEDLD">Afficher une carte plus grande</a> &nbsp; | &nbsp;
+                   <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;rtp=~pos.50.296765039276416_2.7337946946126346____&amp;FORM=MBEDLD">Calculer l’itinéraire</a>
+               </div>
+           </div>
 
 
             <div class="contact center-block col-lg-6">
