--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
                     <div class="formulaire">
 
-                        <form action="" method="post">
+                        <form >
                             <div class="form-group text-dark">
                                 <label for="Email">Email</label>
                                 <input type="email" class="form-control"name="email" id="Email" aria-describedby="emailHelp"
@@ -415,7 +415,7 @@
                                 <textarea class="form-control" name="message" id="Message" rows="3"></textarea>
                             </div>
 
-                            <button type="button" id="sendMail" class="btn btn-dark">Submit</button>
+                            <button  id="sendMail" class="btn btn-dark">Submit</button>
 
                         </form>
 
