--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 <body>
 
+        <div id="imgload"></div>
+
     <nav class="navbar fixed-top navbar-expand-lg ">
 
         <button class="navbar-toggler nav-light collapsed" type="button" data-toggle="collapse"
