footer ok, changement de la police generale / changement des focus

--- a/index.html
+++ b/index.html
@@ -364,7 +364,9 @@
             <div class="col-lg-6" >
                 <iframe width="100%" height="600px;"  frameborder="0" src="https://www.bing.com/maps/embed?h=600&w=1000&cp=50.296765039276416~2.7337946946126346&lvl=17&typ=d&sty=h&src=SHELL&FORM=MBEDV8" scrolling="no">
                 </iframe>
-                <div style=" text-align: center; ">
+                <div style=" text-align: center;  font-family: 'BebasNeueRegular'; 
+                font-weight: normal; 
+                font-style: normal;  ">
                    <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;FORM=MBEDLD">Afficher une carte plus grande</a> &nbsp; | &nbsp;
                    <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;rtp=~pos.50.296765039276416_2.7337946946126346____&amp;FORM=MBEDLD">Calculer l’itinéraire</a>
                </div>
@@ -438,6 +440,33 @@
 
     </div>
 </body>
+<footer>
+
+    <div class="container">
+    <div class="row">
+
+        <div class="col-lg-3">
+            <p>2019 - ITeach, association loi 1901 n°111111 - 7 Rue Diderot 6200 ARRAS</p>
+        </div>
+        <div class="col-lg-3">
+                <p>Concepteur du site: Remy Vancamp</p>
+            </div>
+
+        <div class="col-lg-3">
+            <a href="HTML/mentionLegale.html">Mention légale</a>
+        </div>
+        <div class="col-lg-3">
+                <p>[ajout d'alexandre]</p>
+            </div>
+
+    </div>
+    
+    
+</div>
+<div >
+        <img src="IMG/icon.png"  alt="" srcset="">
+    </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
