--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-lg-6" >
+            <div class="col-lg-6 col-12" >
                 <iframe width="100%" height="600px;"  frameborder="0" src="https://www.bing.com/maps/embed?h=600&w=1000&cp=50.296765039276416~2.7337946946126346&lvl=17&typ=d&sty=h&src=SHELL&FORM=MBEDV8" scrolling="no">
                 </iframe>
                 <div style=" text-align: center;  font-family: 'BebasNeueRegular'; 
@@ -373,7 +373,7 @@
            </div>
 
 
-            <div class="contact col-lg-6"   >
+            <div class="contact col-lg-6 col-12"   >
                 <div class="containe2 ">
                     <div class="socialnetwork row ">
 
