mention legale en souligner

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             </div>
 
         <div class="col-lg-3">
-            <a href="HTML/mentionLegale.html">Mention légale</a>
+            <a href="HTML/mentionLegale.html" style="text-decoration: underline">Mention légale</a>
         </div>
         <div class="col-lg-3">
                 <p>[ajout d'alexandre]</p>
