--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     <h1 id="lequipe" class="textSection textRem">L'Equipe</h1>
 
-    <div class="container col-lg-7">
+    <div class="container ">
 
         <div class="row justify-content-around" id="EquipeGall">
 
