correction des ancres sur caroussel

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="item">
                 <div class="textSlide">
                     <H5>Projet Humanitaire - Clique à Bayangam - Edition 2019</H5>
-                    <p>En juillet 2019, Maxime et Rémy ont formé 35 enfants du village de Bayangam au Cameroun à la programmation informatique. Ce projet a été réalisé en partenariat avec l'<a href="http://www.bayangam-nord.fr/">ARBAF</a>. Découvrez leur aventure sur notre <a href="https://www.facebook.com/asso.ITeach/">page Facebook</a> !</p>
+                    <p>En juillet 2019, Maxime et Rémy ont formé 35 enfants du village de Bayangam au Cameroun à la programmation informatique. Ce projet a été réalisé en partenariat avec l'<a style="color: red; text-decoration:underline" href="http://www.bayangam-nord.fr/" style="color: red; text-decoration:underline">ARBAF</a>. Découvrez leur aventure sur notre <a  style="color: red; text-decoration:underline"href="https://www.facebook.com/asso.ITeach/" >page Facebook</a> !</p>
                 </div><img class="rounded" src="IMG/cameroun.jpg">
             </div>
             <div class="item">
