order minor change

--- a/index.html
+++ b/index.html
@@ -253,16 +253,6 @@
 
         <div class="row justify-content-around" id="EquipeGall">
 
-            <div class="card   col-5  border-0 " width="300" height="300">
-                <img class="rounded" src="IMG/remy.png" width="100%"> 
-                <div class="textCard ">
-                    <H5>REMY VANCAMP</H5>
-                    <p class="description">Co-fondateur / Secretaire</p>
-                    <a href="https://www.linkedin.com/in/remy-vancamp-7ba8a0136/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
-                </div>
-            </div>
-
-
             <div class="card   col-5  border-0 "  width="300" height="300">
                 <img class="rounded" src="IMG/alexandre.jpg" width="100%"> 
                 <div class="textCard ">
@@ -272,7 +262,14 @@
                 </div>
             </div>
 
-
+            <div class="card  col-5  border-0" width="300" height="300">
+                <img class="rounded" src="IMG/claire.jpg" width="100%">
+                <div class="textCard ">
+                    <H5>CLAIRE BILLAU</H5>
+                    <p class="description">Vice-Presidente</p>
+                    <a href="https://www.linkedin.com/in/claire-billau-76a643154/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
+                </div>
+            </div>
 
             <div class="card   col-5  border-0 " width="300" height="300">
                 <img class="rounded" src="IMG/maxime.jpg" width="100%">
@@ -282,29 +279,32 @@
                     <a href="https://www.linkedin.com/in/maxime-hollebecq-38342713a/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
-            <div class="card  col-5  border-0" width="300" height="300">
-                <img class="rounded" src="IMG/claire.jpg" width="100%">
+
+            <div class="card  col-5 border-0  " width="300" height="300">
+                <img class="rounded" src="IMG/antoine.jpg" width="100%">
                 <div class="textCard ">
-                    <H5>CLAIRE BILLAU</H5>
-                    <p class="description">Vice-Presidente</p>
-                    <a href="https://www.linkedin.com/in/claire-billau-76a643154/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
+                    <H5>ANTOINE MARCOTTE</H5>
+                    <p class="description">Vice-Trésorier</p>
+                    <a href="https://www.linkedin.com/in/antoine-marcotte-aa9237151/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
+
+            <div class="card   col-5  border-0 " width="300" height="300">
+                <img class="rounded" src="IMG/remy.png" width="100%"> 
+                <div class="textCard ">
+                    <H5>REMY VANCAMP</H5>
+                    <p class="description">Co-fondateur / Secretaire</p>
+                    <a href="https://www.linkedin.com/in/remy-vancamp-7ba8a0136/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
+                </div>
+            </div>
+
+            
             <div class="card  col-5  border-0 " width="300" height="300">
                 <img class="rounded" src="IMG/pierre.jpg" width="100%">
                 <div class="textCard ">
                     <H5>PIERRE BURETTE</H5>
                     <p class="description">Vice-Secretaire</p>
                     <a href="https://www.linkedin.com/in/pierre-burette-579492151/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
-                </div>
-            </div>
-
-            <div class="card  col-5 border-0  " width="300" height="300">
-                <img class="rounded" src="IMG/antoine.jpg" width="100%">
-                <div class="textCard ">
-                    <H5>ANTOINE MARCOTTE</H5>
-                    <p class="description">Vice-Secretaire</p>
-                    <a href="https://www.linkedin.com/in/antoine-marcotte-aa9237151/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
 
@@ -421,14 +421,13 @@
                                 <textarea class="form-control" name="message" id="Message" rows="3"></textarea>
                             </div>
 
-                            <button  id="sendMail" class="btn btn-dark">Submit</button>
+                            <button  id="sendMail" class="btn btn-dark">Envoyer</button>
 
                         </form>
 
 
                     </div>
                 </div>
-
             </div>
 
         </div>
