--- a/index.html
+++ b/index.html
@@ -364,9 +364,7 @@
             <div class="col-lg-6 col-12" >
                 <iframe width="100%" height="600px;"  frameborder="0" src="https://www.bing.com/maps/embed?h=600&w=1000&cp=50.296765039276416~2.7337946946126346&lvl=17&typ=d&sty=h&src=SHELL&FORM=MBEDV8" scrolling="no">
                 </iframe>
-                <div style=" text-align: center;  font-family: 'BebasNeueRegular'; 
-                font-weight: normal; 
-                font-style: normal;  ">
+                <div style=" text-align: center;  ">
                    <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;FORM=MBEDLD">Afficher une carte plus grande</a> &nbsp; | &nbsp;
                    <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=50.296765039276416~2.7337946946126346&amp;sty=h&amp;lvl=17&amp;rtp=~pos.50.296765039276416_2.7337946946126346____&amp;FORM=MBEDLD">Calculer l’itinéraire</a>
                </div>
