--- a/index.html
+++ b/index.html
@@ -219,19 +219,19 @@
         <div class="owl-carousel owl-theme carousel3">
             <div class="item">
                 <div class="textSlide">
-                    <H5>Salle informatique - 14 postes fixes - Boiry-Notre-Dame</H5>
+                    <H5 class="titreslide"  >Salle informatique - 14 postes fixes - Boiry-Notre-Dame</H5>
                     <p>"ITeach m’a proposé un projet cohérent qui permettrait aux élèves de l'école de bénéficier d'ordinateurs recyclés organisés en réseau. Ce dernier a été mis en service et offre aujourd'hui la possibilité à 60 élèves de bénéficier de séances de découverte des TUIC et de pratique informatique mensuelle grâce à des ateliers spécifiques conçus par les bénévoles de l’association." – Directeur de l’école primaire de Boiry-Notre-Dame.</p>
                 </div><img class="rounded" src="IMG/boiry2.jpg" width="100%">
             </div>
             <div class="item">
                 <div class="textSlide">
-                    <H5>Projet Humanitaire - Clique à Bayangam - Edition 2019</H5>
+                    <H5 class="titreslide" >Projet Humanitaire - Clique à Bayangam - Edition 2019</H5>
                     <p>En juillet 2019, Maxime et Rémy ont formé 35 enfants du village de Bayangam au Cameroun à la programmation informatique. Ce projet a été réalisé en partenariat avec l'<a style="color: red; text-decoration:underline" href="http://www.bayangam-nord.fr/" style="color: red; text-decoration:underline">ARBAF</a>. Découvrez leur aventure sur notre <a  style="color: red; text-decoration:underline"href="https://www.facebook.com/asso.ITeach/" >page Facebook</a> !</p>
                 </div><img class="rounded" src="IMG/cameroun.jpg">
             </div>
             <div class="item">
                 <div class="textSlide">
-                    <H5>Salle informatique - 12 postes portables - Agnières</H5>
+                    <H5 class="titreslide" >Salle informatique - 12 postes portables - Agnières</H5>
                     <p>Remise en état d'une mâle informatique contenant 12 mini-pc portables. Un réseau Wifi et un serveur de partage de fichiers ont également été mis en place. Ces ordinateurs sont aujourd'hui utilisés aussi bien par l'institutrice en classe que lors de nos ateliers. </p>
                 </div>
                 <img class="rounded" src="IMG/Agniere.jpg" width="100%">
@@ -239,7 +239,7 @@
             <div class="item">
 
                 <div class="textSlide">
-                    <H5>Salle informatique - 4 postes fixes - Ablain-Saint-Nazaire</H5>
+                    <H5 class="titreslide" >Salle informatique - 4 postes fixes - Ablain-Saint-Nazaire</H5>
                     <p>Remplacement de postes obsolètes par de nouveaux plus performants. Une suite de logiciels éducatifs a été installée en accord avec les besoins des enseignants de l'école.</p>
                 </div><img class="rounded" src="IMG/ablain1.jpg">
             </div>
