Add mentions légales

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -398,8 +398,8 @@
                     </div>
 
                     <div class="formulaire">
-
-                        <form >
+                        <p>N'hésitez pas à nous contacter : <a href="mailto:iteach@outlook.fr">iteach@outlook.fr</a></p>
+                        <!--<form >
                             <div class="form-group text-dark">
                                 <label for="Email">Email</label>
                                 <input type="email" class="form-control"name="email" id="Email" aria-describedby="emailHelp"
@@ -423,7 +423,7 @@
 
                             <button  id="sendMail" class="btn btn-dark">Envoyer</button>
 
-                        </form>
+                        </form>-->
 
 
                     </div>
@@ -443,17 +443,17 @@
     <div class="row">
 
         <div class="col-lg-3">
-            <p>2019 - ITeach, association loi 1901 n°111111 - 7 Rue Diderot 6200 ARRAS</p>
+            <p>2019 - ITeach - 7 Rue Diderot 6200 ARRAS</p>
         </div>
         <div class="col-lg-3">
-                <p>Concepteur du site: Remy Vancamp</p>
+                <p>Association loi 1901 - RNA W621009188</p>
             </div>
 
         <div class="col-lg-3">
-            <a href="HTML/mentionLegale.html" style="text-decoration: underline">Mention légale</a>
+            <a href="mentionslegales" style="text-decoration: underline">Mentions légales</a>
         </div>
         <div class="col-lg-3">
-                <p>[ajout d'alexandre]</p>
+                <p>Concepteur du site: Remy Vancamp</p>
             </div>
 
     </div>
