minor design changes

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <img class="rounded" src="IMG/alexandre.jpg" width="100%"> 
                 <div class="textCard ">
                     <H5>ALEXANDRE LECOMTE</H5>
-                    <p class="description">Co-fondateur / President</p>
+                    <p class="description">Co-fondateur / Président</p>
                     <a href="https://www.linkedin.com/in/alexandre-lecomte-48b169134/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                 <img class="rounded" src="IMG/claire.jpg" width="100%">
                 <div class="textCard ">
                     <H5>CLAIRE BILLAU</H5>
-                    <p class="description">Vice-Presidente</p>
+                    <p class="description">Vice-Présidente</p>
                     <a href="https://www.linkedin.com/in/claire-billau-76a643154/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
@@ -275,7 +275,7 @@
                 <img class="rounded" src="IMG/maxime.jpg" width="100%">
                 <div class="textCard ">
                     <H5>MAXIME HOLLEBECQ</H5>
-                    <p class="description">Co-fondateur / Tresorier</p>
+                    <p class="description">Co-fondateur / Trésorier</p>
                     <a href="https://www.linkedin.com/in/maxime-hollebecq-38342713a/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                 <img class="rounded" src="IMG/remy.png" width="100%"> 
                 <div class="textCard ">
                     <H5>REMY VANCAMP</H5>
-                    <p class="description">Co-fondateur / Secretaire</p>
+                    <p class="description">Co-fondateur / Secrétaire</p>
                     <a href="https://www.linkedin.com/in/remy-vancamp-7ba8a0136/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
@@ -303,7 +303,7 @@
                 <img class="rounded" src="IMG/pierre.jpg" width="100%">
                 <div class="textCard ">
                     <H5>PIERRE BURETTE</H5>
-                    <p class="description">Vice-Secretaire</p>
+                    <p class="description">Vice-Secrétaire</p>
                     <a href="https://www.linkedin.com/in/pierre-burette-579492151/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
@@ -356,7 +356,7 @@
     </div>
 
 
-    <h1 id="contact" class="textSection textRem">Contactez Nous</h1>
+    <h1 id="contact" class="textSection textRem">Contactez-nous</h1>
 
     <div class="container">
         <div class="row">
