--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
                 </div>
             </div>
             <div class="card  col-5 border-0 " width="300" height="300">
-                <img class="rounded" src="IMG/man.jpg" width="100%">
+                <img class="rounded" src="IMG/sami.jpg" width="100%">
                 <div class="textCard ">
                     <H5>SAMI KOSBUR</H5>
                     <p class="description">Animateur</p>
-                    <a href=""><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
+                    <a href="https://www.linkedin.com/in/sami-kosbur-59246a194/"><i class="fab fa-2x fa-linkedin text-dark;"></i></a>
                 </div>
             </div>
             <div class="card  col-5 border-0 " width="300" height="300">
